--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
 <body>
     
     <div id="app">
-        <div class="container">
+        <div class="container" v-if="emails.length === 20">
             <h1>Elenco email:</h1>
             <ul>
                 <li v-for="email in emails">
                     {{email}}
                 </li>
             </ul>
+        </div>
+        <div class="container" v-else>
+            <p>...In caricamento</p>
         </div>
     </div>
 
